--- a/templates/index.html
+++ b/templates/index.html
@@ -362,7 +362,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h4>DQN CarRacing AI</h4>
+                    <h4>DQN CarRacing 
+                    </h4>
                     <p>Advanced Deep Reinforcement Learning for Autonomous Racing</p>
                 </div>
                 <div class="footer-section">
